--- a/style.css
+++ b/style.css
@@ -142,11 +142,11 @@ section h2 {
 }
 
 #langEn {
-    grid-template: langEn;
+    grid-area: langEn;
 }
 
 #langDe {
-    grid-template: langDe;
+    grid-area: langDe;
 }
 
 #education {
@@ -159,7 +159,7 @@ section h2 {
 
 
 
-@media screen and (min-width: 55em) {
+@media screen and (min-width: 60em) {
     
     body {
         margin-left: 20em;
